// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note component renders a .Note by default 1`] = `
<div
  className="Note"
>
  <h2
    className="Note__title"
  >
    <Link
      to="/notes/undefined"
    />
  </h2>
  <div
    className="Note__date"
  >
    Modified 
    Invalid Date
  </div>
  <button
    className="Note__delete"
    onClick={[Function]}
  >
    Delete Note
  </button>
</div>
`;

exports[`Note component renders the Note given props 1`] = `
<div
  className="Note"
>
  <h2
    className="Note__title"
  >
    <Link
      to="/notes/a"
    >
      test-class-name
    </Link>
  </h2>
  <div
    className="Note__date"
  >
    Modified 
    1/15/2019
  </div>
  <button
    className="Note__delete"
    onClick={[Function]}
  >
    Delete Note
  </button>
</div>
`;
